# memspaces

./: .gitignore  Makefile.am  autogen.sh  configure.ac
c-prototype/: Makefile.am
c-prototype/memspace/libmemspace/: libmemspace.c  libmemspace.h
c-prototype/memspace/maintenance/: destroy.c
c-prototype/memspace/producerconsumer/: consumer.c  producer.c
memspace/libmemspace/: libmemspace.c  libmemspace.h
memspace/maintenance/: destroy.c
memspace/producerconsumer/: consumer.c  producer.c
python-prototype/: setup.py
python-prototype/memspaces/: __init__.py  __main__.py  shmem.py  xmlrpc.py
python-prototype/tests/: conftest.py  test_shmem.py  test_xmlrpc.py
python-prototype/tests/shmempy/: conftest.py  test_simple.py
python-prototype/tests/xmlrpc/: conftest.py
