

AC_PREREQ([2.68])
AC_INIT([memspace], [0.1], [andreas.grapentin@hpi.uni-potsdam.de])
AC_CONFIG_SRCDIR([memspace/libmemspace/libmemspace.c])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_AUX_DIR([scripts])
AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_PROG_CC
AM_PROG_AR

LT_INIT

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
